@@ -1,3 +1,7 @@
+1998-06-11  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
+
+	* emacs.scm: Bugfix: Treat `the-last-stack' as a fluid.
+
 1998-06-09  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* boot-9.scm: Check that (current-input-port) is a tty before
